# Heliora

./: .env.example  .gitignore  Anchor.toml  README.md  build_wsl.sh  bun.lockb  index.html  package-lock.json  package.json  test_result.md  test_rust.sh
.emergent/: emergent.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  core.py  package-lock.json  package.json  seeders.py  server.py  test-solana.ts  tsconfig.json
backend/prisma/: dev.db  schema.prisma  seed.js  seed.js.map  seed.ts
backend/routes/: agents.py  markets.py  oracle.py  stats.py  trades.py  ws.py
backend/scripts/: agent-keypair.json  fix-idl.js  generate-keypair.js  request-airdrop.js
backend/src/: index.ts
backend/tests/: backend_test.py
frontend/: Dockerfile  README.md  bun.lockb  cloudbuild.yaml  error.json  error.txt  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vite.config.ts.timestamp-1777737412094-3f6ae77ec227a8.mjs
frontend/backend/: README.md
frontend/programs/heliora/: Cargo.toml  README.md  Xargo.toml
frontend/src/: App.tsx  index.css  main.tsx
frontend/supabase/: config.toml
memory/: PRD.md
programs/: Anchor.toml  package.json
programs/heliora_market_factory/: Anchor.toml  README.md  program-keypair.json
programs/tests/: prediction_market.ts
src/: App.tsx  index.css
src/components/: MarketCard.tsx
src/lib/: api-types.ts  api.ts  mock-data.ts
src/pages/: Agents.tsx  CreateMarket.tsx  Developers.tsx  Index.tsx  Leaderboard.tsx  MarketDetail.tsx  Markets.tsx  (+2 more)
test_reports/: iteration_1.json
(+66 files in other folders)
