[package]
name = "heliora"
version = "0.1.0"
description = "Heliora: AI-native prediction market protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "heliora"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
